--- a/Contact.html
+++ b/Contact.html
@@ -12,6 +12,7 @@
     <hr>
     <h3>Your Request</h3>
     <form action="mailto: ayaanrehman91@gmail.com" method="post" enctype="text/plain">
+      <label>Date:</label>
       <input type="date" name="Date" value="">
       <br>
       <br>
